do some alignment correction

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
@@ -470,14 +471,15 @@ ul {
     }
 
     .card_works {
-      grid-auto-flow: column;
+      grid-template-columns: 1fr 1fr;
+      width: 90%;
+      margin: auto;
       padding: 24px;
-      grid-gap: 12px;
+      grid-gap: 24px;
 
       .card_image {
-        height: 100%;
-        width: auto;
-        padding-right: 1rem;
+        width: 100%;
+        padding-bottom: 0;
         display: grid;
       }
 
@@ -488,8 +490,7 @@ ul {
       .card_detail {
         display: grid;
         align-content: start;
-        grid-gap: 36px;
-        height: 465px;
+        grid-gap: 24px;
         width: 100%;
 
         .card_title {
